| Summary: | ASTERISK-22566: [patch] app_cdr leaves application registered and res_parking leaks a ref to config | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2013-09-21 03:42:37 | Date Closed: | 2013-09-27 16:57:03 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_cdr Resources/res_parking |
| Versions: | SVN 12.0.0-alpha1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) ASTERISK-22566.patch ( 1) ASTERISK-22566-r2.patch | |
| Description: | app_cdr leaves ResetCDR application registered
res_parking doesn't unref globals (aco object) | ||
| Comments: | By: Richard Mudgett (rmudgett) 2013-09-21 12:43:25.662-0500 The app_cdr change should just unregister the applications and always return 0. The module doesn't care if the application was registered or not when it is unloading. It just cares that the application is no longer registered when the unload function returns. By: Corey Farrell (coreyfarrell) 2013-09-21 14:56:07.667-0500 r2 ignores return from app unregister. | ||